syntax = "proto3";

package micro.relation.v1;

import "google/api/annotations.proto";
import "api/micro/user/v1/user.proto";

option go_package = "github.com/go-microservice/ins-api/api/micro/relation/v1;v1";

service RelationService {
  rpc Follow(FollowRequest) returns (FollowReply) {
    option (google.api.http) = {
      post: "/v1/users/follow"
      body: "*"
    };
  }
  rpc Unfollow(UnfollowRequest) returns (UnfollowReply) {
    option (google.api.http) = {
      post: "/v1/users/unfollow"
      body: "*"
    };
  }
  rpc GetFollowingUserList(GetFollowingUserListRequest) returns (GetFollowingUserListReply) {
    option (google.api.http) = {
      get: "/v1/users/{user_id}/following"
      body: "*"
    };
  }
  rpc GetFollowerUserList(GetFollowerUserListRequest) returns(GetFollowerUserListReply) {
    option (google.api.http) = {
      get: "/v1/users/{user_id}/follower"
      body: "*"
    };
  }
}

message FollowRequest {
  int64 user_id = 1;
  int64 followed_uid = 2;
}

message FollowReply {
}

message UnfollowRequest {
  int64 user_id = 1;
  int64 followed_uid = 2;
}

message UnfollowReply {
}

message GetFollowingUserListRequest {
  string user_id = 1;
  string last_id = 2;
  string limit = 3;
}

message GetFollowingUserListReply {
  repeated micro.user.v1.User items = 1;
}

message GetFollowerUserListRequest {
  int64 user_id = 1;
  int64 last_id = 2;
  int64 limit = 3;
}

message GetFollowerUserListReply {
  repeated micro.user.v1.User users = 1;
}